src/test/ui/consts/rfc-2203-const-array-repeat-exprs/nll-fail.stderr
error[E0277]: the trait bound `std::option::Option<Bar>: std::marker::Copy` is not satisfied
  --> $DIR/nll-fail.rs:14:37
   |
LL |         let arr: [Option<Bar>; 2] = [x; 2];
   |                                     ^^^^^^ the trait `std::marker::Copy` is not implemented for `std::option::Option<Bar>`
   |
   = help: the following implementations were found:
             <std::option::Option<T> as std::marker::Copy>
   = note: the `Copy` trait is required because the repeated element will be copied

error[E0277]: the trait bound `std::option::Option<Bar>: std::marker::Copy` is not satisfied
  --> $DIR/nll-fail.rs:20:37
   |
LL |         let arr: [Option<Bar>; 2] = [x; 2];
   |                                     ^^^^^^ the trait `std::marker::Copy` is not implemented for `std::option::Option<Bar>`
   |
   = help: the following implementations were found:
             <std::option::Option<T> as std::marker::Copy>
   = note: the `Copy` trait is required because the repeated element will be copied

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
